Minor changes * Expression card is now resizable * Fix layout issues

--- a/src/app.css
+++ b/src/app.css
@@ -3,10 +3,12 @@ main {
     flex-direction: column;
     background-color: var(--back-color);
 }
-@media (min-height: 1081px) {
+
+@media (min-height: 974px) {
     main {
         min-height: 92.4vh;
         justify-content: center;
+
     }
 }
 
